# kaleido-api

./: .containerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
data/content/statics/: index.html
data/nginx/conf.d/: default.conf
kanban/0001_check_secret_exists/: 0001_check_secret_exists.md  log.md
kanban/0002_register_cf_tunnel_secret/: 0002_register_cf_tunnel_secret.md  log.md
kanban/0003_deploy_quadlets/: 0003_deploy_quadlets.md  log.md
kanban/0004_fix_secret_registration_error/: 0004_fix_secret_registration_error.md  log.md
kanban/0005_systemd_user_service_not_found/: 0005_systemd_user_service_not_found.md  log.md
kanban/0006_improve_deploy_quadlet_reliability/: 0006_improve_deploy_quadlet_reliability.md  log.md
kanban/0007_verify_quadlet_generation/: 0007_verify_quadlet_generation.md  log.md
kanban/0008_configure_quadlet_dependencies/: 0008_configure_quadlet_dependencies.md  log.md
quadlets/: kaleido-api-app.container  kaleido-api-cloudflared.container  kaleido-api.network
scripts/: create_quadlets.py
scripts/templates/: kaleido-api-app.build.jinja2  kaleido-api-content.volume.jinja2  kaleido-api-log.volume.jinja2  kaleido-api-nginx.container.jinja2
src/: main.py
src/utils/: variables.py
src/utils/logger/: __init__.py  logger.py  logging_instance_function.py
src/utils/models/: __init__.py  environment_variables.py
